# KaSpan

./: .clang-format  .clang-tidy  .gitignore  .iwyu_mappings.imp  .output.txt  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  experiment_horeka_strong.sh  experiment_horeka_weak.sh  experiment_iti_strong.sh  experiment_iti_weak.sh  experiment_local_strong.sh  experiment_local_weak.sh  test_degree_bound.cpp
experiment/: base.py  gnm_directed.py  graph.py  horeka.cancel.sh  horeka.check.sh  horeka.cmd.sh  horeka.download.bat  horeka.job.sh  horeka.py  horeka.queue.sh  horeka.run.sh  horeka.run.sh.save  horeka.run.sh.save.1  horeka.run.sh.save.2  horeka.watch.sh  horeka_kagen_weak.py  ispan.py  ispan.suite.yaml  kagen_weak.py  kaspan.py  kaspan.suite.yaml  plt.py  plt_horeka_kagen_weak.py  plt_horeka_kagen_weak_phases.py  rmat_directed.py
kaspan/: README.md  header.cmake
plt/: plt.py
scc/: header.cmake
script/: download_webdata.sh  download_wikisocial.sh  file_lock.py  graph.py  run_clang_format.sh  run_clang_tidy.sh  run_iwyu.sh  run_valgrind.sh
test/: test_allgather_graph.cpp  test_allgather_sub_graph.cpp  test_arithmetic.cpp  test_assert.cpp  test_assert_cmp.cpp  test_bidi_graph.cpp  test_bidi_graph_part.cpp  test_bits.cpp  test_bits_accessor.cpp  test_bits_ops.cpp  test_briefkasten.cpp  test_dense_unsigned.cpp  test_dense_unsigned_ops.cpp  test_distributed_buffer.cpp  test_distributed_partition.cpp  test_edge_frontier.cpp  test_fuzzy_generator.cpp  test_graph.cpp  test_graph_load.cpp  test_graph_part.cpp  test_hash_index_map.cpp  test_hash_map.cpp  test_hash_set.cpp  test_inplace_partition_by_rank.cpp  test_interface_static_asserts.cpp  test_math.cpp  test_mpi_basic_nullptr.cpp  test_once_queue.cpp  test_part.cpp  test_pp.cpp  test_result.cpp  test_scc_fuzzy.cpp  test_scope_guard.cpp  test_stack.cpp  test_tarjan_fuzzy.cpp  (+4 more)
(+719 files in other folders)
